Update the plugin to 1.10.0 with latest release of Point SDK.

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
     id="au.com.bluedot.bdpointsdk"
-    version="1.9.6">
+    version="1.10.0">
 
     <!-- This plugin requires Cordova version 3.1.0 or newer. -->
     <engines>
@@ -97,25 +97,10 @@
         <framework src="com.android.support:support-v4:+" />
         <!-- google-play-services is not used by Bluedot Point SDK but is required for installing security providers https://developer.android.com/training/articles/security-gms-provider.html -->
         <framework src="com.google.android.gms:play-services:8.+" />
+        <!-- Adding custom gradle file to import Bluedot Android Point SDK Dependency -->
+        <framework src="src/android/bluedotplugin.gradle" custom="true" type="gradleReference"/>
 
-        <config-file target="AndroidManifest.xml" parent="/*">
-          <uses-permission android:name="android.permission.INTERNET" />
-          <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-          <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-          <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-          <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-          <uses-permission android:name="android.permission.BLUETOOTH"/>
-          <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-        </config-file>
-
-        <config-file target="AndroidManifest.xml" parent="/manifest/application">
-          <service android:name="au.com.bluedot.point.beacon.BlueDotBLEService" android:exported="false"/>
-          <service android:name="au.com.bluedot.point.net.engine.DataJobScheduler" android:exported="false" android:permission="android.permission.BIND_JOB_SERVICE" />
-          <service android:name="au.com.bluedot.point.net.engine.BlueDotPointService" android:exported="false"/>
-        </config-file>
-
-        <source-file src="src/android/BDPointSDKWrapper.java" target-dir="src/au/com/bluedot/minimalLocationApp" />
-        <source-file src="src/android/bluedot-point-sdk-release.jar" target-dir="libs" />
+        <source-file src="src/android/BDPointSDKWrapper.java" target-dir="src/au/com/bluedot" />
 
     </platform>
 </plugin>
