Updated Cordova version to 9.0.0 Android Bluedot SDK version 1.13.2 Exposed 2 API's

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
     id="au.com.bluedot.bdpointsdk"
-    version="1.13.1">
+    version="1.13.2">
 
     <!-- This plugin requires Cordova version 8.0.0 or newer. -->
     <engines>
-        <engine name="cordova" version=">=8.1.2" />
+        <engine name="cordova" version=">=9.0.0" />
     </engines>
 
     <name>Bluedot Point SDK</name>
@@ -58,6 +58,7 @@
 
         <!-- google-play-services is not used by Bluedot Point SDK but is required for installing security providers https://developer.android.com/training/articles/security-gms-provider.html -->
         <framework src="com.google.android.gms:play-services-base:15.0.1" />
+        <framework src="com.google.android.gms:play-services-location:16.0.0" />
 
         <!-- Adding custom gradle file to import Bluedot Android Point SDK Dependency -->
         <framework src="src/android/bluedotplugin.gradle" custom="true" type="gradleReference"/>
