--- a/src/android/bluedotplugin.gradle
+++ b/src/android/bluedotplugin.gradle
@@ -6,5 +6,5 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.Bluedot-Innovation:PointSDK-Android:1.13.3'
+    implementation 'com.gitlab.bluedotio.android:point_sdk_android:15.3.4'
 }
