--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bluedot-cordova",
+  "name": "@bluedot-innovation/bluedot-cordova",
   "version": "2.0.0",
   "description": "Bluedot Point SDK; integrates the Android and iOS Point SDK libraries through a Cordova / PhoneGap plugin",
   "cordova": {
