--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
-    id="bluedot-cordova"
+    id="@bluedot-innovation/cordova-plugin"
     version="2.0.0">
 
     <dependency id="cordova-plugin-device" version="2.0.3" />
