--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "Bluedot Point SDK; integrates the Android and iOS Point SDK libraries through a Cordova / PhoneGap plugin",
   "cordova": {
-    "id": "au.com.bluedot.bdpointsdk",
+    "id": "io.bluedot.bdpointsdk",
     "platforms": [
       "ios",
       "android"
